crates/hook-rs/src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__assignment_word_in_prefix.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: RUST_LOG=debug cargo test
children:
  - children:
      - name: cargo
        args:
          - test
        env_vars:
          - - RUST_LOG
            - debug
