crates/hook-rs/src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__assignment_word_in_suffix_substitution.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: command key=$(whoami)
children:
  - children:
      - name: command
        args:
          - key=$(whoami)
        contains_substitution: true
      - name: whoami
        nesting:
          - Substitution
