crates/hook-rs/src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__assignment_word_mutation.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: "gh api graphql -f query='mutation { addComment(input: {subjectId: \"123\"}) { commentEdge { node { body } } } }'"
children:
  - children:
      - name: gh
        args:
          - api
          - graphql
          - "-f"
          - "query='mutation { addComment(input: {subjectId: \"123\"}) { commentEdge { node { body } } } }'"
