crates/hook-rs/src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__command_substitution_backtick.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: "echo `whoami`"
children:
  - children:
      - name: echo
        args:
          - "`whoami`"
        contains_substitution: true
      - name: whoami
        nesting:
          - Substitution
