crates/hook-rs/src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__complex_multi_statement_with_substitutions_and_redirects.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: "cargo doc --document-private-items -p globset 2>&1 | tail -5; grep -r \"impl.*Debug\" $(find target/doc -name \"struct.GlobMatcher.html\" 2>/dev/null) 2>/dev/null || echo \"checking source instead\"; grep \"derive\" $(find . -path \"*/globset/src/*.rs\" -not -path \"./target/*\" 2>/dev/null) 2>/dev/null || echo \"not in local source\""
children:
  - children:
      - name: cargo
        args:
          - doc
          - "--document-private-items"
          - "-p"
          - globset
      - name: tail
        args:
          - "-5"
  - connector: Semi
    children:
      - name: grep
        args:
          - "-r"
          - "\"impl.*Debug\""
          - "$(find target/doc -name \"struct.GlobMatcher.html\" 2>/dev/null)"
        contains_substitution: true
      - name: find
        args:
          - target/doc
          - "-name"
          - "\"struct.GlobMatcher.html\""
        nesting:
          - Substitution
  - connector: Or
    children:
      - name: echo
        args:
          - "\"checking source instead\""
  - connector: Semi
    children:
      - name: grep
        args:
          - "\"derive\""
          - "$(find . -path \"*/globset/src/*.rs\" -not -path \"./target/*\" 2>/dev/null)"
        contains_substitution: true
      - name: find
        args:
          - "."
          - "-path"
          - "\"*/globset/src/*.rs\""
          - "-not"
          - "-path"
          - "\"./target/*\""
        nesting:
          - Substitution
  - connector: Or
    children:
      - name: echo
        args:
          - "\"not in local source\""
