crates/hook-rs/src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__for_loop.snap
---
source: src/utils/parsers/bash/bash_parser.rs
expression: context
---
raw: for f in *.tmp; do echo $f; done
children:
  - children:
      - name: echo
        args:
          - $f
        has_variable: true
        nesting:
          - For
