crates/hook-rs/src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__inner_command_with_args.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: "git commit -m \"$(date +%Y)\""
children:
  - children:
      - name: git
        args:
          - commit
          - "-m"
          - "\"$(date +%Y)\""
        contains_substitution: true
      - name: date
        args:
          - +%Y
        nesting:
          - Substitution
