crates/hook-rs/src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__multiple_substitutions_in_one_command.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: echo $(whoami) $(date)
children:
  - children:
      - name: echo
        args:
          - $(whoami)
          - $(date)
        contains_substitution: true
      - name: whoami
        nesting:
          - Substitution
      - name: date
        nesting:
          - Substitution
