crates/hook-rs/src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__parse_no_heredoc.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: cargo insta review
children:
  - children:
      - name: cargo
        args:
          - insta
          - review
