crates/hook-rs/src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__parse_pipe.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: git log | head -5
children:
  - children:
      - name: git
        args:
          - log
      - name: head
        args:
          - "-5"
