crates/hook-rs/src/utils/parsers/bash/snapshots/hook_rs__utils__parsers__bash__bash_parser__tests__redirect_dev_null.snap
---
source: src/bash/bash_parser.rs
expression: context
---
raw: git status 2>/dev/null
children:
  - children:
      - name: git
        args:
          - status
